# Xengine

./: CMakeLists.txt  QUICKSTART.md  README.md  VERSION.txt  build.sh  install.sh
audio/: audio_system.h
audio/core/: engine.cpp  engine.h
audio/core/input/graphics/: graphics_device.h  renderer.h
audio/core/input/graphics/math/: matrix.h  vector.h
audio/core/input/graphics/math/scene/: scene_manager.h
audio/core/input/graphics/math/scene/physics/: physics_world.h
docs/: getting-started.md
examples/platformer/: game.nova  game.vex
examples/simple/: main.cpp
tools/: apk-builder.py  xengine-cli.py
